Regression: Freeze when switching to material preview or render view #97686

Closed
opened 2022-04-28 18:57:25 +02:00 by wueo · 15 comments

System Information
Operating system: Linux-5.17.4-xanmod1-1-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce RTX 3080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.60.02

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-27 23:53, hash: 8399375098
Worked: not sure

Not bisected but appears to be caused by 9c82c00b32

Short description of error
started blender and turned to eevee shading and it freezes. nothing can click anymore.
found out its because my saved startup file didnt have material on default cube what causes it. so i deleted startup.blend file in config folder and started and eevee shading works again.
i think its bug because what if people dont want have material on default cube on startup file

Steps to Reproduce

  • Open attached file
  • Switch to material preview or render view

startup.blend

**System Information** Operating system: Linux-5.17.4-xanmod1-1-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce RTX 3080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.60.02 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-27 23:53, hash: `8399375098` Worked: not sure Not bisected but appears to be caused by 9c82c00b32 **Short description of error** started blender and turned to eevee shading and it freezes. nothing can click anymore. found out its because my saved startup file didnt have material on default cube what causes it. so i deleted startup.blend file in config folder and started and eevee shading works again. i think its bug because what if people dont want have material on default cube on startup file **Steps to Reproduce** - Open attached file - Switch to material preview or render view [startup.blend](https://archive.blender.org/developer/F13035722/startup.blend)
Author

Added subscriber: @mushroomeo

Added subscriber: @mushroomeo

#97703 was marked as duplicate of this issue

#97703 was marked as duplicate of this issue

#97704 was marked as duplicate of this issue

#97704 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Thanks for the report.

found out its because my saved startup file didnt have material on default cube

I followed your steps and changed the startup file. I did not see any freeze with the new startup file after switching to viewport rendering
Can you confirm the issue with the file I've attached? Do you still have your old startup file? Can you upload that?
startup.blend

Thanks for the report. > found out its because my saved startup file didnt have material on default cube I followed your steps and changed the startup file. I did not see any freeze with the new startup file after switching to viewport rendering Can you confirm the issue with the file I've attached? Do you still have your old startup file? Can you upload that? [startup.blend](https://archive.blender.org/developer/F13035722/startup.blend)
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

I can reproduce this:

  • Open the 2D Animation template
  • Go to object mode and add a mesh, e.g. Monkey
  • Blender freezes

The issue seems to be in 9c82c00b32. There is a while loop with a sleep that keeps looping forever.

I can reproduce this: - Open the 2D Animation template - Go to object mode and add a mesh, e.g. Monkey - Blender freezes The issue seems to be in 9c82c00b32. There is a while loop with a sleep that keeps looping forever.

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Added subscribers: @Wyk, @ThomasDinges

Added subscribers: @Wyk, @ThomasDinges

Added subscriber: @fclem

Added subscriber: @fclem

@fclem Hey, can you please check on this?

@fclem Hey, can you please check on this?
Thomas Dinges changed title from eevee freeze without having material on startup file to EEVEE freeze without having material on startup file 2022-04-29 15:29:05 +02:00

Added subscriber: @kuzey

Added subscriber: @kuzey
Pratik Borhade changed title from EEVEE freeze without having material on startup file to Regression: Freeze when switching to material preview or render view 2022-04-29 15:30:28 +02:00

This issue was referenced by 3b7bce45d2

This issue was referenced by 3b7bce45d23e033a135b16b5da6cd741867f0a78

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2022-04-29 17:57:45 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97686
No description provided.